Update social media links in common templates

--- a/templates/common/projects.html
+++ b/templates/common/projects.html
@@ -46,6 +46,18 @@
                             </a>
                         </li>
                         <li>
+                            <a class="mr-1" href="https://orcid.org/0009-0009-2411-9640">
+                                <i aria-hidden="true" class="fab fa-orcid" title="ORCID"></i>
+                                ORCID
+                            </a>
+                        </li>
+                        <li>
+                            <a class="mr-1" href="https://scholar.google.com/citations?user=npFc4MMAAAAJ&hl=jp">
+                                <i aria-hidden="true" class="fab fa-google-scholar" title="Google Scholar"></i>
+                                Google Scholar
+                            </a>
+                        </li>
+                        <li>
                             <a class="mr-1" href="https://stackoverflow.com/users/19939086/%e3%82%b3%e3%83%aa%e3%83%b3">
                                 <i aria-hidden="true" class="fab fa-stack-overflow" title="Stack Overflow"></i>
                                 Stack Overflow
