Update research.html and remove research_abstract.pdf

--- a/templates/common/research.html
+++ b/templates/common/research.html
@@ -112,38 +112,29 @@
             </aside>
 
             <main class="col-lg">
-                <h2>Master's Research Project - 3D Bioprinting (3Dバイオプリンティング) <a
-                        href="https://en.wikipedia.org/wiki/3D_bioprinting"><i class="fa-brands fa-wikipedia-w"></i></a>
+                <h2>3D Bioprinting (3Dバイオプリンティング) <a href="https://en.wikipedia.org/wiki/3D_bioprinting"><i
+                            class="fa-brands fa-wikipedia-w"></i></a>
                 </h2>
-                <h3><i class="fa-solid fa-file-pdf"></i></i> Research Summary Slides (2023/06/24)</h3>
-                <a class="custom-button" href="../../assets/research_summary.pdf" target="_blank">
+
+                <h3><i class="fa-solid fa-file-pdf"></i></i> Machine learning-based prediction and optimisation
+                    framework for as-extruded cell viability in extrusion-based 3D bioprinting (2024/09/11)</h3>
+                <a class="custom-button" href="../../assets/paper_1.pdf" target="_blank">
                     Open in new tab
                     <i class="fas fa-external-link-alt ms-1"></i>
                 </a>
                 <iframe class="pdf-viewer"
-                    src="https://mozilla.github.io/pdf.js/web/viewer.html?file=https://raw.githubusercontent.com/KORINZ/KORINZ.github.io/main/assets/research_summary.pdf"
-                    style="height:600px;"></iframe>
+                    src="https://mozilla.github.io/pdf.js/web/viewer.html?file=https://raw.githubusercontent.com/KORINZ/KORINZ.github.io/main/assets/paper_1.pdf"
+                    style="height:750px;"></iframe>
 
                 <br>
 
-                <h3><i class="fa-solid fa-file-pdf"></i></i> Research Poster (2023/07/06)</h3>
-                <a class="custom-button" href="../../assets/research_poster.pdf" target="_blank">
+                <h3><i class="fa-solid fa-file-pdf"></i></i> 化学工学会第 55 回秋季大会プレスリリース (2024/08/28)</h3>
+                <a class="custom-button" href="../../assets/press-W308.pdf" target="_blank">
                     Open in new tab
                     <i class="fas fa-external-link-alt ms-1"></i>
                 </a>
                 <iframe class="pdf-viewer"
-                    src="https://mozilla.github.io/pdf.js/web/viewer.html?file=https://raw.githubusercontent.com/KORINZ/KORINZ.github.io/main/assets/research_poster.pdf"
-                    style="height:600px;"></iframe>
-
-                <br>
-
-                <h3><i class="fa-solid fa-file-pdf"></i></i> Research Abstract (Part I, 2022/08/10)</h3>
-                <a class="custom-button" href="../../assets/research_abstract.pdf" target="_blank">
-                    Open in new tab
-                    <i class="fas fa-external-link-alt ms-1"></i>
-                </a>
-                <iframe class="pdf-viewer"
-                    src="https://mozilla.github.io/pdf.js/web/viewer.html?file=https://raw.githubusercontent.com/KORINZ/KORINZ.github.io/main/assets/research_abstract.pdf"
+                    src="https://mozilla.github.io/pdf.js/web/viewer.html?file=https://raw.githubusercontent.com/KORINZ/KORINZ.github.io/main/assets/press-W308.pdf"
                     style="height:600px;"></iframe>
 
                 <a href="#" id="back-to-top" style="display: none;" class="back-to-top custom-button" role="button">
