Update Japanese translation and optimize bioprinting workflow

--- a/templates/common/research.html
+++ b/templates/common/research.html
@@ -128,14 +128,14 @@
 
                 <br>
 
-                <h3><i class="fa-solid fa-file-pdf"></i></i> 化学工学会第 55 回秋季大会プレスリリース (2024/08/28)</h3>
+                <h3><i class="fa-solid fa-file-pdf"></i></i> 化学工学会第55回秋季大会プレスリリース 注目講演 (2024/08/28)</h3>
                 <a class="custom-button" href="../../assets/press-W308.pdf" target="_blank">
                     Open in new tab
                     <i class="fas fa-external-link-alt ms-1"></i>
                 </a>
                 <iframe class="pdf-viewer"
                     src="https://mozilla.github.io/pdf.js/web/viewer.html?file=https://raw.githubusercontent.com/KORINZ/KORINZ.github.io/main/assets/press-W308.pdf"
-                    style="height:600px;"></iframe>
+                    style="height:750px;"></iframe>
 
                 <a href="#" id="back-to-top" style="display: none;" class="back-to-top custom-button" role="button">
                     <i class="fas fa-chevron-up"></i>
