--- a/templates/common/research.html
+++ b/templates/common/research.html
@@ -128,7 +128,7 @@
 
                 <br>
 
-                <h3><i class="fa-solid fa-file-pdf"></i></i> 化学工学会第55回秋季大会プレスリリース 注目講演 (2024/08/28)</h3>
+                <h3><i class="fa-solid fa-file-pdf"></i></i> 化学工学会第55回秋季大会プレスリリース 注目講演 [1130件中の22件] (2024/08/28)</h3>
                 <a class="custom-button" href="../../assets/press-W308.pdf" target="_blank">
                     Open in new tab
                     <i class="fas fa-external-link-alt ms-1"></i>
