Optimize research.html and add research images

--- a/templates/common/research.html
+++ b/templates/common/research.html
@@ -116,6 +116,18 @@
                             class="fa-brands fa-wikipedia-w"></i></a>
                 </h2>
 
+
+                <figure style="text-align: center;">
+                    <p>
+                        <img src="../../assets/research_overview.png" alt="research_overview" width="500">
+
+                        <img src="../../assets/objectives_overview.png" alt="research_overview" width="500">
+
+                    </p>
+                </figure>
+
+                <br>
+
                 <h3><i class="fa-solid fa-file-pdf"></i></i> Machine learning-based prediction and optimisation
                     framework for as-extruded cell viability in extrusion-based 3D bioprinting (2024/09/11)</h3>
                 <a class="custom-button" href="../../assets/paper_1.pdf" target="_blank">
