Update research.html: Add heading for related research

--- a/templates/common/research.html
+++ b/templates/common/research.html
@@ -126,7 +126,7 @@
                     </p>
                 </figure>
 
-                <br>
+                <h2>Research Related (関連研究)</h2>
 
                 <h3><i class="fa-solid fa-file-pdf"></i></i> Machine learning-based prediction and optimisation
                     framework for as-extruded cell viability in extrusion-based 3D bioprinting (2024/09/11)</h3>
