Optimize research.html: Rearrange images and add margin to one image

--- a/templates/common/research.html
+++ b/templates/common/research.html
@@ -119,12 +119,12 @@
 
                 <figure style="text-align: center;">
                     <p>
-
-                        <img src="../../assets/objectives_overview.png" alt="research_overview" width="500">
+                        <img src="../../assets/objectives_overview.png" alt="research_overview" width="500"
+                            style="margin-right: 50px;">
                         <img src="../../assets/research_overview.png" alt="research_overview" width="500">
-
                     </p>
                 </figure>
+
 
                 <h2>Research Related (関連研究)</h2>
 
