--- a/templates/common/research.html
+++ b/templates/common/research.html
@@ -118,12 +118,15 @@
 
 
                 <figure style="text-align: center;">
-                    <p>
-                        <img src="../../assets/objectives_overview.png" alt="research_overview" width="500"
-                            style="margin-right: 50px;">
-                        <img src="../../assets/research_overview.png" alt="research_overview" width="500">
+                    <p style="display: flex; flex-wrap: wrap; justify-content: center; align-items: center; gap: 50px;">
+                        <img src="../../assets/objectives_overview.png" alt="objectives_overview" width="500"
+                            style="max-width: 100%; height: auto;">
+                        <img src="../../assets/research_overview.png" alt="research_overview" width="500"
+                            style="max-width: 100%; height: auto;">
                     </p>
                 </figure>
+
+
 
 
                 <h2>Research Related (関連研究)</h2>
@@ -147,7 +150,7 @@
                 </a>
                 <iframe class="pdf-viewer"
                     src="https://mozilla.github.io/pdf.js/web/viewer.html?file=https://raw.githubusercontent.com/KORINZ/KORINZ.github.io/main/assets/press-W308.pdf"
-                    style="height:750px;"></iframe>
+                    style="height:650px;"></iframe>
 
                 <a href="#" id="back-to-top" style="display: none;" class="back-to-top custom-button" role="button">
                     <i class="fas fa-chevron-up"></i>
