--- a/templates/ja/index.html
+++ b/templates/ja/index.html
@@ -171,6 +171,7 @@
                     <figcaption><strong>Figure
                             0. </strong>バイオプリンティング最適化のためのワークフロー:
                         レオロジー試験で得られたインクの特性を基に、針の押出しプロセスの数値シミュレーションが行われ、その後、ライブ/デッド細胞生存率解析が実施されます。機械学習モデルは、細胞の種類、インクの粘度、押出しパラメータを統合し、細胞生存率を予測・最適化します。
+                        <a href="https://www.biorender.com/">BioRender</a>で作成。
                     </figcaption>
                 </figure>
 
