Optimize research.html: Update ordered list start attribute

--- a/templates/ja/index.html
+++ b/templates/ja/index.html
@@ -176,7 +176,7 @@
                 </figure>
 
                 <h2>論文</h2>
-                <ol>
+                <ol start="0">
                     <li><b>Colin Zhang</b>, Kelum C. M. L. Elvitigala, Wildan Mubarok, Yasunori Okano, and Shinji Sakai.
                         (2024).
                         Machine learning-based prediction and optimization framework for as-extruded cell viability in
@@ -198,7 +198,7 @@
                 </ol>
 
                 <h2>学会</h2>
-                <ol>
+                <ol start="0">
                     <li>
                         化学工学会第55回秋季大会、北海道大学、2024年9月10日～13日<br>
                         講演題目：機械学習を用いた押出型3Dバイオプリンティングにおける細胞生存率の予測モデリング <b>[<a
