--- a/templates/ja/index.html
+++ b/templates/ja/index.html
@@ -118,7 +118,7 @@
 
                 <h2>私について</h2>
 
-                <p>大阪大学の博士課程で計算流体力学と3Dバイオプリンティングを研究しています。幼い頃から科学と工学に魅了され、カリフォルニア大学サンタバーバラ校で機械工学を学ぶ中で計算問題に強い関心を持つようになりました。科学と計算の融合点に立ち、プログラミングを学び始めたことで、計算思考という強力な概念を含む新たな問題解決の世界が開けました。
+                <p>大阪大学で博士課程の学生として、計算流体力学、機械学習の応用、3Dバイオプリンティングに取り組んでいます。幼い頃から科学と工学に魅了され、カリフォルニア大学サンタバーバラ校で機械工学を学ぶ中で計算問題に強い関心を持つようになりました。科学と計算の融合点に立ち、プログラミングを学び始めたことで、計算思考という強力な概念を含む新たな問題解決の世界が開けました。
                 </p>
 
                 <p>Python、C、JavaScript、HTML/CSS、そして機械学習のスキルを身につけるにつれ、プログラミングが従来の工学分野をいかに革新できるかを実感しています。特に、機械学習とバイオテクノロジーの組み合わせには大きな可能性があると考えています。文部科学省の国費留学生として日本に留学し、これらの分野をより深く探求する機会を得ながら、大阪大学附属図書館本館で学部生のサポートも行っています。
@@ -179,7 +179,7 @@
                 <ol start="0">
                     <li><b>Colin Zhang</b>, Kelum C. M. L. Elvitigala, Wildan Mubarok, Yasunori Okano, and Shinji Sakai.
                         (2024).
-                        Machine learning-based prediction and optimization framework for as-extruded cell viability in
+                        Machine learning-based prediction and optimisation framework for as-extruded cell viability in
                         extrusion-based 3D bioprinting. <i>Virtual and Physical Prototyping</i>, <i>17</i>(1), e2400330.
                         <a
                             href="https://doi.org/10.1080/17452759.2024.2400330">https://doi.org/10.1080/17452759.2024.2400330</a>.
