Optimize research.html: Update PDF link and adjust image layout

--- a/templates/common/research.html
+++ b/templates/common/research.html
@@ -133,12 +133,13 @@
 
                 <h3><i class="fa-solid fa-file-pdf"></i></i> Machine learning-based prediction and optimisation
                     framework for as-extruded cell viability in extrusion-based 3D bioprinting (2024/09/11)</h3>
-                <a class="custom-button" href="../../assets/paper_1.pdf" target="_blank">
+                <a class="custom-button" href="../../assets/Machine_learning-based_prediction_and_optimisation.pdf"
+                    target="_blank">
                     Open in new tab
                     <i class="fas fa-external-link-alt ms-1"></i>
                 </a>
                 <iframe class="pdf-viewer"
-                    src="https://mozilla.github.io/pdf.js/web/viewer.html?file=https://raw.githubusercontent.com/KORINZ/KORINZ.github.io/main/assets/paper_1.pdf"
+                    src="https://mozilla.github.io/pdf.js/web/viewer.html?file=https://raw.githubusercontent.com/KORINZ/KORINZ.github.io/main/assets/Machine_learning-based_prediction_and_optimisation.pdf"
                     style="height:750px;"></iframe>
 
                 <br>
