Optimize research.html: Update PDF link, adjust image layout, and update headings

--- a/templates/common/research.html
+++ b/templates/common/research.html
@@ -112,9 +112,7 @@
             </aside>
 
             <main class="col-lg">
-                <h2>3D Bioprinting (3Dバイオプリンティング) <a href="https://en.wikipedia.org/wiki/3D_bioprinting"><i
-                            class="fa-brands fa-wikipedia-w"></i></a>
-                </h2>
+                <h2><i class="fa-solid fa-print"></i> 3D Bioprinting (3Dバイオプリンティング)</h2>
 
 
                 <figure style="text-align: center;">
@@ -129,15 +127,33 @@
 
 
 
-                <h2>Research Related (研究関連)</h2>
+                <h2><i class="fa-solid fa-flask-vial"></i> Research Related (研究関連)</h2>
 
                 <h3><i class="fa-solid fa-file-pdf"></i></i> Machine learning-based prediction and optimisation
                     framework for as-extruded cell viability in extrusion-based 3D bioprinting (2024/09/11)</h3>
+
+                <p>
+                    <b>Colin Zhang</b>, Kelum C. M. L. Elvitigala, Wildan Mubarok, Yasunori Okano, and Shinji Sakai.
+                    (2024).
+                    Machine learning-based prediction and optimisation framework for as-extruded cell viability in
+                    extrusion-based 3D bioprinting. <i>Virtual and Physical Prototyping</i>, <i>17</i>(1), e2400330.
+                    <a
+                        href="https://doi.org/10.1080/17452759.2024.2400330">https://doi.org/10.1080/17452759.2024.2400330</a>.
+
+                </p>
+
                 <a class="custom-button" href="../../assets/Machine_learning-based_prediction_and_optimisation.pdf"
                     target="_blank">
-                    Open in new tab
+                    Open PDF in new tab
                     <i class="fas fa-external-link-alt ms-1"></i>
                 </a>
+
+                <a class="custom-button" href="../../assets/Machine_learning-based_prediction_and_optimisation.pdf"
+                    download>
+                    Download PDF
+                    <i class="fas fa-download ms-1"></i>
+                </a>
+
                 <iframe class="pdf-viewer"
                     src="https://mozilla.github.io/pdf.js/web/viewer.html?file=https://raw.githubusercontent.com/KORINZ/KORINZ.github.io/main/assets/Machine_learning-based_prediction_and_optimisation.pdf"
                     style="height:750px;"></iframe>
@@ -145,8 +161,12 @@
                 <br>
 
                 <h3><i class="fa-solid fa-file-pdf"></i></i> 化学工学会第55回秋季大会プレスリリース 注目講演 [1130件中の22件] (2024/08/28)</h3>
+
+                <p><a href="https://www.scej.org/news/detail/23235"> https://www.scej.org/news/detail/23235</a> </p>
+
+
                 <a class="custom-button" href="../../assets/press-W308.pdf" target="_blank">
-                    Open in new tab
+                    Open PDF in new tab
                     <i class="fas fa-external-link-alt ms-1"></i>
                 </a>
                 <iframe class="pdf-viewer"
