Optimize gallery.html: Update animal icon in heading

--- a/templates/common/gallery.html
+++ b/templates/common/gallery.html
@@ -179,7 +179,7 @@
                     </ul>
                 </figure>
 
-                <h2><i class="fa-solid fa-fish-fins"></i> 動物 (Animals)</h2>
+                <h2><i class="fa-solid fa-hippo"></i> 動物 (Animals)</h2>
                 <figure class="gallery-image figure-container">
                     <ul class="figure-ul">
                         <li class="figure-li">
