--- a/templates/common/projects.html
+++ b/templates/common/projects.html
@@ -350,7 +350,7 @@
 
                 <br>
 
-                <h2><i class=" fa-solid fa-code"></i>
+                <h2><i class=" fa-solid fa-code"> <i class="fa-solid fa-bug"></i></i>
                     Preparing (準備中)
                 </h2>
                 <div class="language-plaintext highlighter-rouge">
