--- a/templates/common/projects.html
+++ b/templates/common/projects.html
@@ -3,10 +3,21 @@
 
 <head>
     <meta charset="utf-8">
+
+    <!-- begin SEO -->
+    <title>Projects - Colin ZHANG</title>
+    <meta property="og:locale" content="en-US">
+    <meta property="og:site_name" content="Colin ZHANG">
+    <meta property="og:title" content="Projects - Colin ZHANG">
+    <link rel="canonical" href="https://korinz.github.io/">
+    <meta property="og:url" content="https://korinz.github.io/">
+    <meta property="og:description" content="Programming projects">
+    <script
+        type="application/ld+json"> { "@context" : "http://schema.org", "@type" : "Person", "name" : "Colin ZHANG", "url" : "https://korinz.github.io", "sameAs" : null } </script>
+    <!-- end SEO -->
+
     <meta name="viewport" content="initial-scale=1, width=device-width">
-    <meta property="og:description" content="KORIN's Projects">
     <meta property="og:image" content="static/web_screenshot.png">
-    <meta property="og:title" content="Projects - KORIN">
     <link href="https://upload.wikimedia.org/wikipedia/commons/3/34/Home-icon.svg" rel="icon">
     <link href="../../static/styles.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
@@ -15,7 +26,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&family=Roboto&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <title>Projects - KORIN</title>
 </head>
 
 <body
@@ -24,7 +34,7 @@
         <div class="row">
             <aside class="col-lg">
                 <header>
-                    <h1><a href="../../index.html">KORIN</a></h1>
+                    <h1><a href="../../index.html">COLIN</a></h1>
                     <div class="top-bar">
                         <span>Projects</span>
                         <button id="theme-toggler" class="theme-button">
@@ -103,7 +113,8 @@
                     <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript"><i
                             class="fa-brands fa-square-js"></i></a>
                     <footer>
-                        <span style="font-size: smaller;"><i class="fa-regular fa-copyright"></i> 2024 KORIN. All rights
+                        <span style="font-size: smaller;"><i class="fa-regular fa-copyright"></i> 2024 KORINZ. All
+                            rights
                             reserved.</span>
                     </footer>
                 </nav>
