--- a/templates/ja/index.html
+++ b/templates/ja/index.html
@@ -3,12 +3,24 @@
 
 <head>
     <meta charset="utf-8">
+
+    <!-- begin SEO -->
+    <title>ホームページ - チョウ コリン</title>
+    <meta property="og:locale" content="ja">
+    <meta property="og:site_name" content="チョウ コリン">
+    <meta property="og:title" content="チョウ コリン">
+    <link rel="canonical" href="https://korinz.github.io/">
+    <meta property="og:url" content="https://korinz.github.io/">
+    <meta property="og:description" content="自己紹介">
+    <script
+        type="application/ld+json"> { "@context" : "http://schema.org", "@type" : "Person", "name" : "Colin ZHANG", "url" : "https://korinz.github.io", "sameAs" : null } </script>
+    <!-- end SEO -->
+
     <meta name="viewport" content="initial-scale=1, width=device-width">
-    <meta property="og:description" content="KORIN's Homepage">
     <meta property="og:image" content="static/web_screenshot.png">
-    <meta property="og:title" content="Homepage - KORIN">
     <link href="../../static/home.png" rel="icon">
     <link href="../../static/styles.css" rel="stylesheet">
+    <link rel="preload" href="../../static/printability_setup.png" as="image">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,7 +29,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&family=Roboto&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <title>ホームページ - コリン</title>
 </head>
 
 <body
@@ -114,7 +125,8 @@
                     <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript"><i
                             class="fa-brands fa-square-js"></i></a>
                     <footer>
-                        <span style="font-size: smaller;"><i class="fa-regular fa-copyright"></i> 2024 KORIN. All rights
+                        <span style="font-size: smaller;"><i class="fa-regular fa-copyright"></i> 2024 KORINZ. All
+                            rights
                             reserved.</span>
                     </footer>
                 </nav>
