Optimize language links in index.html and templates/ja/index.html

--- a/templates/ja/index.html
+++ b/templates/ja/index.html
@@ -260,7 +260,7 @@
                 </a>
 
                 <h2>連絡先</h2>
-                <p>以下のPythonスクリプトを実行することで、ASCIIから文字列への変換を利用して私に連絡を取ることができます：</p>
+                <p>以下のPythonスクリプトを実行することで、ASCIIから文字列への変換を利用して私に連絡を取ることができます:</p>
                 <div class="language-plaintext highlighter-rouge">
                     <div class="highlight">
                         <pre
