Add open access icons

--- a/templates/common/research.html
+++ b/templates/common/research.html
@@ -147,7 +147,7 @@
 
                 <h2><i class="fa-solid fa-flask-vial"></i> Research Related (研究関連)</h2>
 
-                <h3><i class="fa-solid fa-file-pdf"></i></i> Machine learning-based prediction and optimisation
+                <h3><i class="fa-solid fa-file-pdf"></i> Machine learning-based prediction and optimisation
                     framework for as-extruded cell viability in extrusion-based 3D bioprinting (2024/09/11)</h3>
 
                 <p>
@@ -155,8 +155,10 @@
                     (2024).
                     Machine learning-based prediction and optimisation framework for as-extruded cell viability in
                     extrusion-based 3D bioprinting. <i>Virtual and Physical Prototyping</i>, <i>17</i>(1), e2400330.
+                    <br>
                     <a
                         href="https://doi.org/10.1080/17452759.2024.2400330">https://doi.org/10.1080/17452759.2024.2400330</a>.
+                    <i class="fa-solid fa-unlock"></i> Open Access.
 
                 </p>
 
@@ -171,6 +173,7 @@
                     Download PDF
                     <i class="fas fa-download ms-1"></i>
                 </a>
+
 
                 <iframe class="pdf-viewer"
                     src="https://mozilla.github.io/pdf.js/web/viewer.html?file=https://raw.githubusercontent.com/KORINZ/KORINZ.github.io/main/assets/Machine_learning-based_prediction_and_optimisation.pdf"
