Optimize open access icons and links

--- a/templates/common/research.html
+++ b/templates/common/research.html
@@ -158,7 +158,7 @@
                     <br>
                     <a
                         href="https://doi.org/10.1080/17452759.2024.2400330">https://doi.org/10.1080/17452759.2024.2400330</a>.
-                    <i class="fa-solid fa-unlock"></i> Open Access.
+                    <i class="fa-solid fa-unlock" style="color: #fba52d;"></i> Open Access.
 
                 </p>
 
