--- a/templates/ja/index.html
+++ b/templates/ja/index.html
@@ -210,7 +210,7 @@
                         <br>
                         <a
                             href="https://doi.org/10.1080/17452759.2024.2400330">https://doi.org/10.1080/17452759.2024.2400330</a>.
-                        <i class="fa-solid fa-unlock"></i> Open Access.
+                        <i class="fa-solid fa-unlock" style="color: #fba52d;"></i> Open Access.
                     </li>
 
                     <li>Mitsuyuki Hidaka, Masaru Kojima, <b>Colin Zhang</b>, Yasunori Okano, and Shinji Sakai. (2024).
@@ -219,7 +219,7 @@
                             Bioprinting</i>, 4091 (in press).
                         <br>
                         <a href="https://doi.org/10.36922/ijb.4091">https://doi.org/10.36922/ijb.4091</a>.
-                        <i class="fa-solid fa-unlock"></i> Open Access.
+                        <i class="fa-solid fa-unlock" style="color: #fba52d;"></i> Open Access.
                     </li>
 
                     <li>Wildan Mubarok, <b>Colin Zhang</b>, and Shinji Sakai. (2024). 3D Bioprinting of Sugar Beet
