Optimize theme toggle functionality and styles

--- a/templates/common/gallery.html
+++ b/templates/common/gallery.html
@@ -47,7 +47,7 @@
                     <div class="top-bar">
                         <span>Gallery</span>
                         <button id="theme-toggler" class="theme-button">
-                            <i id="theme-icon" class="fas fa-moon"></i>
+                            <i id="theme-icon" class="fas fa-moon" style="color: #ffbe3c;"></i>
                         </button>
                     </div>
 
