--- a/templates/ja/index.html
+++ b/templates/ja/index.html
@@ -57,7 +57,7 @@
                         </span>
 
                         <button id="theme-toggler" class="theme-button">
-                            <i id="theme-icon" class="fas fa-moon"></i>
+                            <i id="theme-icon" class="fas fa-moon" style="color: #ffbe3c;"></i>
                         </button>
                     </div>
 
