--- a/templates/common/research.html
+++ b/templates/common/research.html
@@ -46,7 +46,7 @@
                     <div class="top-bar">
                         <span>Research</span>
                         <button id="theme-toggler" class="theme-button">
-                            <i id="theme-icon" class="fas fa-moon"></i>
+                            <i id="theme-icon" class="fas fa-moon" style="color: #ffbe3c;"></i>
                         </button>
                     </div>
 
