Optimize PDF links and filenames

--- a/templates/common/research.html
+++ b/templates/common/research.html
@@ -162,13 +162,15 @@
 
                 </p>
 
-                <a class="custom-button" href="../../assets/Machine_learning-based_prediction_and_optimisation.pdf"
+                <a class="custom-button"
+                    href="../../assets/Machine learning-based prediction and optimisation framework for as-extruded cell viability in extrusion-based 3D bioprinting.pdf"
                     target="_blank">
                     Open PDF in new tab
                     <i class="fas fa-external-link-alt ms-1"></i>
                 </a>
 
-                <a class="custom-button" href="../../assets/Machine_learning-based_prediction_and_optimisation.pdf"
+                <a class="custom-button"
+                    href="../../assets/Machine learning-based prediction and optimisation framework for as-extruded cell viability in extrusion-based 3D bioprinting.pdf"
                     download>
                     Download PDF
                     <i class="fas fa-download ms-1"></i>
@@ -176,7 +178,7 @@
 
 
                 <iframe class="pdf-viewer"
-                    src="https://mozilla.github.io/pdf.js/web/viewer.html?file=https://raw.githubusercontent.com/KORINZ/KORINZ.github.io/main/assets/Machine_learning-based_prediction_and_optimisation.pdf"
+                    src="https://mozilla.github.io/pdf.js/web/viewer.html?file=https://raw.githubusercontent.com/KORINZ/KORINZ.github.io/main/assets/Machine learning-based prediction and optimisation framework for as-extruded cell viability in extrusion-based 3D bioprinting.pdf"
                     style="height:750px;"></iframe>
 
                 <br>
@@ -186,12 +188,12 @@
                 <p><a href="https://www.scej.org/news/detail/23235"> https://www.scej.org/news/detail/23235</a> </p>
 
 
-                <a class="custom-button" href="../../assets/press-W308.pdf" target="_blank">
+                <a class="custom-button" href="../../assets/化学工学会第55回秋季大会注目講演_W308.pdf" target="_blank">
                     Open PDF in new tab
                     <i class="fas fa-external-link-alt ms-1"></i>
                 </a>
                 <iframe class="pdf-viewer"
-                    src="https://mozilla.github.io/pdf.js/web/viewer.html?file=https://raw.githubusercontent.com/KORINZ/KORINZ.github.io/main/assets/press-W308.pdf"
+                    src="https://mozilla.github.io/pdf.js/web/viewer.html?file=https://raw.githubusercontent.com/KORINZ/KORINZ.github.io/main/assets/化学工学会第55回秋季大会注目講演_W308.pdf"
                     style="height:650px;"></iframe>
 
                 <a href="#" id="back-to-top" style="display: none;" class="back-to-top custom-button" role="button">
