Add NHK news official links

--- a/templates/ja/index.html
+++ b/templates/ja/index.html
@@ -160,8 +160,9 @@
                     style="width: 100%; height: 350px; overflow: auto; border: 1px solid black; padding: 10px;">
                     <h2 style="font-size: 2.5rem; margin-bottom: 20px; text-align: center;">NHK NEWS WEB EASY スクレイパー
                     </h2>
-                    <p style=" font-size: 1rem;">このツールは、NHK NEWS WEB
-                        EASYのウェブサイトから簡易化された日本語のニュース記事を取得し表示するのに役立ちます。ニュースの内容だけでなく、重要な語彙とその発音を抽出し、可能な場合には辞書の定義も提供します。</p>
+                    <p style=" font-size: 1rem;">このツールは、<a
+                            href="https://www3.nhk.or.jp/news/easy/">NHKやさしいことばニュース</a>のウェブサイトから簡易化された日本語のニュース記事を取得し表示するのに役立ちます。ニュースの内容だけでなく、重要な語彙とその発音を抽出し、可能な場合には辞書の定義も提供します。
+                    </p>
                     <p style="font-size: 1rem;">始めるには、『作成』ボタンをクリックするだけです。また、『コピー』ボタンを使って内容をクリップボードにコピーすることもできます。</p>
                     <p style="font-size: 1rem;">
                         なお、ニュースの更新は平日に2回、おおよそ午後12時と午後5時に行われます。これらの更新期間中は、ニュース取得機能が正しく動作しない場合があります。また、『作成』機能は、NHK NEWS
