Optimize Google Scholar links in common templates

--- a/templates/common/gallery.html
+++ b/templates/common/gallery.html
@@ -71,7 +71,7 @@
                             </a>
                         </li>
                         <li>
-                            <a class="mr-1" href="https://scholar.google.com/citations?user=npFc4MMAAAAJ&hl=jp">
+                            <a class="mr-1" href="https://scholar.google.com/citations?user=npFc4MMAAAAJ&hl=en">
                                 <i aria-hidden="true" class="fab fa-google-scholar" title="Google Scholar"></i>
                                 Google Scholar
                             </a>
