--- a/templates/common/research.html
+++ b/templates/common/research.html
@@ -70,7 +70,7 @@
                             </a>
                         </li>
                         <li>
-                            <a class="mr-1" href="https://scholar.google.com/citations?user=npFc4MMAAAAJ&hl=jp">
+                            <a class="mr-1" href="https://scholar.google.com/citations?user=npFc4MMAAAAJ&hl=en">
                                 <i aria-hidden="true" class="fab fa-google-scholar" title="Google Scholar"></i>
                                 Google Scholar
                             </a>
@@ -195,6 +195,15 @@
                 <iframe class="pdf-viewer"
                     src="https://mozilla.github.io/pdf.js/web/viewer.html?file=https://raw.githubusercontent.com/KORINZ/KORINZ.github.io/main/assets/化学工学会第55回秋季大会注目講演_W308.pdf"
                     style="height:650px;"></iframe>
+
+
+                <h2><i class="fa-solid fa-user"></i> Quick Links (クイックリンク)</h2>
+                <ul>
+                    <li><a href="https://scholar.google.com/citations?user=npFc4MMAAAAJ&hl=en">Google Scholar</a></li>
+                    <li><a href="https://orcid.org/0009-0009-2411-9640">ORCID</a></li>
+                    <li><a href="https://www.scopus.com/authid/detail.uri?authorId=59043674900">Scopus ID</a></li>
+                    <li><a href="https://www.researchgate.net/profile/Colin-Zhang-9">ResearchGate</a></li>
+                </ul>
 
                 <a href="#" id="back-to-top" style="display: none;" class="back-to-top custom-button" role="button">
                     <i class="fas fa-chevron-up"></i>
