Optimize theme toggle functionality and styles

--- a/templates/common/projects.html
+++ b/templates/common/projects.html
@@ -45,7 +45,7 @@
                     <div class="top-bar">
                         <span>Projects</span>
                         <button id="theme-toggler" class="theme-button">
-                            <i id="theme-icon" class="fas fa-moon" style="color: #ffbe3c;"></i>
+                            <i id="theme-icon" class="fas fa-moon" style="color: #f4d640;"></i>
                         </button>
                     </div>
 
@@ -131,7 +131,7 @@
             <main class="col-lg">
 
                 <h2><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" style="text-decoration: none;"><i
-                            class="fa-brands fa-square-js"></i></a> Yet Another
+                            class="fa-brands fa-square-js" style="color: #f4d640;"></i></a> Yet Another
                     Web-based Basic Calculator (再びWEB電卓)
                 </h2>
                 <div id="wrapper">
@@ -242,7 +242,8 @@
                 <br>
 
                 <h2><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" style="text-decoration: none;"><i
-                            class="fa-brands fa-square-js"></i></a> Tic-Tac-Toe AI (三目並べ AI)</h2>
+                            class="fa-brands fa-square-js" style="color: #e6d35a;"></i></a> Tic-Tac-Toe AI (三目並べ AI)
+                </h2>
                 <div class="game-container">
                     <div id="board"></div>
                     <div id="game-result-container">
