--- a/templates/common/research.html
+++ b/templates/common/research.html
@@ -202,6 +202,7 @@
                     <li><a href="https://scholar.google.com/citations?user=npFc4MMAAAAJ&hl=en">Google Scholar</a></li>
                     <li><a href="https://orcid.org/0009-0009-2411-9640">ORCID</a></li>
                     <li><a href="https://www.scopus.com/authid/detail.uri?authorId=59043674900">Scopus ID</a></li>
+                    <li><a href="https://www.webofscience.com/wos/author/record/LLK-8213-2024">ResearcherID</a></li>
                     <li><a href="https://www.researchgate.net/profile/Colin-Zhang-9">ResearchGate</a></li>
                 </ul>
 
