--- a/templates/common/research.html
+++ b/templates/common/research.html
@@ -197,24 +197,37 @@
                     style="height:650px;"></iframe>
 
 
-                <h2><i class="fa-solid fa-user"></i> Quick Links (クイックリンク)</h2>
-                <ul>
-                    <li><a href="https://scholar.google.com/citations?user=npFc4MMAAAAJ&hl=en">Google Scholar</a></li>
-                    <li><a href="https://orcid.org/0009-0009-2411-9640">ORCID</a></li>
-                    <li><a href="https://www.scopus.com/authid/detail.uri?authorId=59043674900">Scopus ID</a></li>
-                    <li><a href="https://www.webofscience.com/wos/author/record/LLK-8213-2024">ResearcherID</a></li>
-                    <li><a href="https://www.researchgate.net/profile/Colin-Zhang-9">ResearchGate</a></li>
-                </ul>
-
-                <a href="#" id="back-to-top" style="display: none;" class="back-to-top custom-button" role="button">
-                    <i class="fas fa-chevron-up"></i>
-                </a>
+                <div class="quick-links-container">
+                    <div class="quick-links-list">
+                        <h2><i class="fa-solid fa-user"></i> Quick Links (クイックリンク)</h2>
+                        <ul>
+                            <li><a href="https://scholar.google.com/citations?user=npFc4MMAAAAJ&hl=en">Google Scholar <i
+                                        class="fas fa-external-link-alt"></i></a></li>
+                            <li><a href="https://orcid.org/0009-0009-2411-9640">ORCID <i
+                                        class="fas fa-external-link-alt"></i></a></li>
+                            <li><a href="https://www.scopus.com/authid/detail.uri?authorId=59043674900">Scopus ID <i
+                                        class="fas fa-external-link-alt"></i></a></li>
+                            <li><a href="https://www.webofscience.com/wos/author/record/LLK-8213-2024">ResearcherID <i
+                                        class="fas fa-external-link-alt"></i></a></li>
+                            <li><a href="https://www.researchgate.net/profile/Colin-Zhang-9">ResearchGate <i
+                                        class="fas fa-external-link-alt"></i></a></li>
+                        </ul>
+                    </div>
+                    <div class="orcid-image">
+                        <a href="https://orcid.org/0009-0009-2411-9640">
+                            <img src="../../assets/ORCID.png" alt="ORCID" width="120"
+                                style="max-width: 100%; height: auto;">
+                        </a>
+                    </div>
+                </div>
             </main>
 
         </div>
     </div>
 
-
+    <a href="#" id="back-to-top" style="display: none;" class="back-to-top custom-button" role="button">
+        <i class="fas fa-chevron-up"></i>
+    </a>
     <script src="../../js/change-theme.js"></script>
     <script src="../../js/sidebar-toggle.js"></script>
     <script src="../../js/calendar.js"></script>
