Optimize ORCID image styles and quick links container

--- a/templates/common/research.html
+++ b/templates/common/research.html
@@ -199,7 +199,7 @@
 
                 <div class="quick-links-container">
                     <div class="quick-links-list">
-                        <h2><i class="fa-solid fa-user"></i> Quick Links (クイックリンク)</h2>
+                        <h2><i class="fa-solid fa-user"></i> Links (リンク)</h2>
                         <ul>
                             <li><a href="https://scholar.google.com/citations?user=npFc4MMAAAAJ&hl=en">Google Scholar <i
                                         class="fas fa-external-link-alt"></i></a></li>
@@ -214,10 +214,12 @@
                         </ul>
                     </div>
                     <div class="orcid-image">
-                        <a href="https://orcid.org/0009-0009-2411-9640">
-                            <img src="../../assets/ORCID.png" alt="ORCID" width="120"
-                                style="max-width: 100%; height: auto;">
-                        </a>
+                        <figure>
+                            <a href="https://orcid.org/0009-0009-2411-9640">
+                                <img src="../../assets/ORCID.png" alt="ORCID" width="120"
+                                    style="max-width: 100%; height: auto;">
+                            </a>
+                        </figure>
                     </div>
                 </div>
             </main>
