--- a/static/styles.css
+++ b/static/styles.css
@@ -15465,7 +15465,8 @@ body.dark {
 }
 
 .orcid-image {
-    margin-left: 20px;
+    margin-right: 50px;
+    margin-top: 100px;
     display: flex;
     align-items: center;
     height: 100%;
